--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "homepage": "https://github.com/photopcopy/frontend#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.13",
+    "@types/react-modal": "^3.12.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.29.0",
