--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/photopcopy/frontend.git"
+    "url": "git+https://github.com/photopcopy/photopcopy.git"
   },
   "author": "e",
   "license": "ISC",
@@ -24,6 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
