--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
+    "react-textarea-autosize": "^8.3.3",
     "redux": "^4.1.0",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/react": "^17.0.13",
     "@types/react-modal": "^3.12.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
