--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "photopcopy",
   "version": "1.0.0",
   "description": "Source for photopcopy",
-  "main": "dist/index.js",
   "scripts": {
     "build": "next build",
     "test": "next dev"
@@ -22,6 +21,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@google-cloud/storage": "^5.16.1",
     "eslint-plugin-next": "^0.0.0",
     "express": "^4.17.1",
     "next": "^12.0.7",
