--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@google-cloud/storage": "^5.16.1",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "eslint-plugin-next": "^0.0.0",
     "express": "^4.17.1",
     "next": "^12.0.7",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.3",
