--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@google-cloud/storage": "^5.16.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "eslint-plugin-next": "^0.0.0",
     "express": "^4.17.1",
@@ -40,11 +41,17 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/react": "^3.4.12",
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.13",
     "@types/react-modal": "^3.12.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "babel-loader": "^8.2.3",
     "eslint": "^7.28.0",
     "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
@@ -54,6 +61,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-storybook": "^0.5.5",
     "prettier": "^2.3.1"
   }
 }
