--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@google-cloud/storage": "^5.16.1",
+    "@microsoft/signalr": "^6.0.1",
     "@mui/material": "^5.3.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/react-copy-to-clipboard": "^5.0.2",
